Adding README.md and other files

--- a/2.3. DataManipulation_Tokenization.ipynb
+++ b/2.3. DataManipulation_Tokenization.ipynb
@@ -133,7 +133,8 @@
     "        df:: df scraped\n",
     "    \"\"\"\n",
     "    df = get_df_scraped_tokenized(df)\n",
-    "    df.to_csv(os.path.join(folder, 'df_scraped_token.csv'))"
+    "    # df.to_csv(os.path.join(folder, 'df_scraped_token.csv'))\n",
+    "    df.to_csv(os.path.join(folder, 'df_tokenized.csv'))    "
    ]
   },
   {
